# jmcomic_tachiyomi_fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  docker-ghcr.yml
app/: __init__.py  __main__.py  capabilities.py  config.py  dependencies.py  errors.py  logging_config.py  main.py  schemas.py  security.py  service.py
app/routes/: __init__.py  health.py  manga.py  meta.py  reader.py
docs/: remote-api-openapi.yaml  remote-api.md
jmcomic_fastapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py  test_main.py
