[project]
name = "jmcomic-fastapi"
version = "0.1.0"
description = "JMComic-backed FastAPI server for the Tachiyomi Remote API extension"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "jmcomic>=2.6.10",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "ruff>=0.6",
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["docs/**"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "C4", "RUF"]
ignore = ["E501", "UP046", "UP047"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = ["error"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "ruff>=0.6",
    "pytest>=8.3",
    "httpx>=0.27",
]
